<resources>
    <string name="app_name">CookBooK</string>
    <string name="title">CookBook</string>
    <string name="loginText">Login</string>
    <string name="signupText">Signup</string>
    <string name="passwordText">Password</string>
    <string name="password2Text">Repeat password</string>
    <string name="usernameText">Username</string>
    <string name="searchText">Search…</string>
    <string name="emailText">Email</string>
    <string name="mis_recetas">My recipes</string>
    <string name="recetas_favoritas">Favorite recipes</string>
    <string name="explorar_recetas">Explore</string>
    <string name="createRecipeText">Create Recipe</string>
    <string name="addRecipeText">Add recipe</string>
    <string name="goBackText">Cancel</string>
    <string name="titleNewRecipe">Title of the recipe</string>
    <string name="ingredientsNewRecipe">Ingredients</string>
    <string name="instructionNewRecipe">Instruction</string>
    <string name="imageNewRecipe">Name of the image</string>
    <string name="singup">Not yet registered? SingUp now</string>
    <string name="logo">CookBook</string>
    <string name="ingredients">Ingredients</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="ingredients1">Ingredients</string>
    <string name="settings">Settings</string>
    <string name="contraseña">Password</string>
    <string name="nombre_de_usuario">Username</string>
    <string name="correo_electr_nico">Email</string>
    <string name="saveText">Save changes</string>
    <string name="changePassword">Change Password</string>
    <string name="followButton">Follow</string>
    <string name="Following">Following</string>
    <string name="unfollowButton">Unfollow</string>
    <string name="mensaje_vacio">Empty field</string>
    <string name="acceso">Successful login!</string>
    <string name="contraseñaIncorrecta">Incorrect password</string>
    <string name="noRegistrado">Not registered yet</string>
    <string name="cambioContrasena">Password changed successfully</string>
    <string name="emailIncorrecto">Email format incorrect</string>
    <string name="usuarioRep">Username already in use</string>
    <string name="passwords">Passwords do not match</string>
    <string name="registroE">Registered successfully!</string>
    <string name="recetaAñadida">Recipe added!</string>
    <string name="stopFollow">Stopped following </string>
    <string name="followUser">Follow user </string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="alertDelete">Are you sure you want to delete your account? This action cannot be undone</string>
    <string name="selectI">Select image</string>
    <string name="selectOpt">Please select an option</string>
    <string name="selectF">Select filters</string>
    <string name="glutenFree">Gluten Free</string>
    <string name="vegan">Vegan</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="ok">Ok</string>
    <string name="noDelete">This user is an administrator, he cannot be deleted.</string>
    <string name="changePass">Change password</string>
    <string name="change">Change</string>
    <string name="actualPass">Actual password</string>
    <string name="newPass">New password</string>
    <string name="errorUserdata">Error obtaining user data</string>
    <string name="errorDeleterecipes">Unable to delete recipes</string>
    <string name="errorReadDatabase">Error at the time of reading the database</string>
    <string name="errorLoadRecipe">Error load recipe</string>
    <string name="errorGeneral">Something went wrong!</string>







</resources>